[package]
name = "crdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
incremental = true
codegen-units = 1


[dependencies.clap]
version = "4.3.10"
default-features = false
features = ["std", "derive", "help", "color", "usage"]